<resources>
    <string name="app_name">praktikum_challenge</string>
    <string name="register">Don’t have an account? <b>Register</b></string>
    <string name="welcome">Welcome Back</string>
    <string name="tagline">Enjoy a new world inside a book!</string>
    <string name="maintenance_txt">COMING SOON</string>
    <string name="mt_text">We are still working on it.</string>
    <string name="maintenance_btn">Go to Homepage</string>
</resources>